--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=My Github POC project
+
+# cosmos properties
+#spring.data.cosmos.uri     -- add as environment variable
+#spring.data.cosmos.key    -- add as environment variable
+spring.data.cosmos.databaseName=github-project-db
+spring.data.cosmos.queryMetricsEnabled=true
