--- a/.github/workflows/main_github-poc-app.yml
+++ b/.github/workflows/main_github-poc-app.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write #This is required for actions/checkout
+      packages: write
 
     steps:
       - uses: actions/checkout@v4
