--- a/.github/workflows/main_github-poc-app.yml
+++ b/.github/workflows/main_github-poc-app.yml
@@ -25,6 +25,12 @@ jobs:
           java-version: '21'
           distribution: 'microsoft'
 
+      - name: Make Node binary executable (workaround for frontend-maven-plugin)
+        run: |
+          if [ -f ./webapp/node/node ]; then
+            chmod +x ./webapp/node/node
+          fi
+
       - name: Build with Maven
         run: mvn clean install -X -DskipTests
 
