--- a/.github/workflows/main_github-poc-app.yml
+++ b/.github/workflows/main_github-poc-app.yml
@@ -25,8 +25,16 @@ jobs:
           java-version: '21'
           distribution: 'microsoft'
 
+      - name: install node
+        run: mvn frontend:1.15.1:install-node-and-npm -DnodeVersion=v22.14.0
+      - name: fix permissions
+        run: |
+          if [ -f ./webapp/node/node ]; then
+            chmod +x ./webapp/node/node
+          fi
+
       - name: Build with Maven
-        run: sudo mvn clean install -X -DskipTests
+        run: mvn clean install -X -DskipTests
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
