--- a/.github/workflows/main_github-poc-app.yml
+++ b/.github/workflows/main_github-poc-app.yml
@@ -34,7 +34,7 @@ jobs:
           fi
 
       - name: Build with Maven
-        run: mvn clean install -X -DskipTests
+        run: mvn clean install -DskipTests
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
