trying to fix action

--- a/.github/workflows/main_github-poc-app.yml
+++ b/.github/workflows/main_github-poc-app.yml
@@ -25,16 +25,10 @@ jobs:
           java-version: '21'
           distribution: 'microsoft'
 
-       # Step 1: Run only the npm install phase to trigger node download
-      - name: Run frontend-maven-plugin to trigger node install
-        run: mvn com.github.eirslett:frontend-maven-plugin:1.15.1:npm@npm-install || true
-
-      # Step 2: Fix permissions on the downloaded node binary
-      - name: Fix permissions on Node.js binary
-        run: |
-          if [ -f ./webapp/node/node ]; then
-            chmod +x ./webapp/node/node
-          fi
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.14.0' # or whatever version your app needs
 
       - name: Build with Maven
         run: mvn clean install -DskipTests
