--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
 				<artifactId>frontend-maven-plugin</artifactId>
 				<version>1.15.1</version>
 				<executions>
-					<execution>
+					<!-- <execution>
 						<id>install-node-and-npm</id>
 						<goals>
 							<goal>install-node-and-npm</goal>
@@ -187,7 +187,7 @@
 							<npmVersion>${npm.version}</npmVersion>
 							<installDirectory>${project.basedir}/webapp/node</installDirectory>
 						</configuration>
-					</execution>
+					</execution> -->
 					<execution>
 						<id>npm-install</id>
 						<goals>
