added an about section created a toggle component made the create project page slightly responsive for phones hopefully fixed whitelabel error for serving angular content

--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
 								<resource>
 									<directory>${project.basedir}/webapp/dist/webapp/browser</directory>
 								</resource>
+								<resource>
+									<directory>${project.basedir}/src/main/resources</directory>
+									<includes>
+										<include>rewrite.config</include>
+									</includes>
+								</resource>
 							</resources>
 						</configuration>
 					</execution>
