--- a/.github/workflows/main_github-poc-app.yml
+++ b/.github/workflows/main_github-poc-app.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: '22.14.0' # or whatever version your app needs
 
       - name: Build with Maven
-        run: mvn clean install -DskipTests
+        run: sudo mvn clean install -DskipTests
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
